--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Korn's Tech Blog</title>
-	<link rel="stylesheet" href="../blog-posts/css/app.css"/>
-	<link rel="stylesheet" href="../blog-posts/css/style.css"/>
-	<script src="../blog-posts/bower_components/modernizr/modernizr.js"></script>
+	<link rel="stylesheet" href="blog-posts/css/app.css"/>
+	<link rel="stylesheet" href="blog-posts/css/style.css"/>
+	<script src="blog-posts/bower_components/modernizr/modernizr.js"></script>
 </head>
 <body>
 
@@ -29,11 +29,11 @@
 					<aside class="left-off-canvas-menu">
 						<ul class="off-canvas-list">
 							<li><label>Navigator</label></li>
-							<li><a href="../index.html" class="button">Index</a></li>
+							<li><a href="index.html" class="button">Index</a></li>
 							<li><a href="dbc1.html" class="button">DBC1</a></li>
 							<li><a href="dbc2.html" class="button">DBC2</a></li>
-							<li><a href="../blog-posts/week1_technical.html" class="button">Technical Blog</a></li>
-							<li><a href="../blog-posts/week1_cultural.html" class="button">Cultural Blog</a></li>
+							<li><a href="blog-posts/week1_technical.html" class="button">Technical Blog</a></li>
+							<li><a href="blog-posts/week1_cultural.html" class="button">Cultural Blog</a></li>
 							<li><a href="wireframe_sites.html" class="button">Wireframing</a></li>
 						</ul>
 					</aside>
@@ -43,7 +43,7 @@
 
 							<div class="large-9 columns" role="content">
 								<article>
-									<h2>Wireframing Youtube.com</h2>
+									<h2>Welcome!</h2>
 									<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 17th, 2014</h6>
 									<br>
 									<img src="images/wireframe.png">
@@ -104,8 +104,8 @@
 
 				</div>
 			</div>
-			<script src="../blog-posts/bower_components/jquery/dist/jquery.min.js"></script>
-			<script src="../blog-posts/bower_components/foundation/js/foundation.js"></script>
+			<script src="blog-posts/bower_components/jquery/dist/jquery.min.js"></script>
+			<script src="blog-posts/bower_components/foundation/js/foundation.js"></script>
 			<script>
 				$(document).foundation();
 
