--- a/index.html
+++ b/index.html
@@ -30,42 +30,37 @@
 						<ul class="off-canvas-list">
 							<li><label>Navigator</label></li>
 							<li><a href="index.html" class="button">Index</a></li>
-							<li><a href="dbc1.html" class="button">DBC1</a></li>
-							<li><a href="dbc2.html" class="button">DBC2</a></li>
+							<li><a href="unit1_projects/dbc1.html" class="button">DBC1</a></li>
+							<li><a href="unit1_projects/dbc2.html" class="button">DBC2</a></li>
 							<li><a href="blog-posts/week1_technical.html" class="button">Technical Blog</a></li>
 							<li><a href="blog-posts/week1_cultural.html" class="button">Cultural Blog</a></li>
-							<li><a href="wireframe_sites.html" class="button">Wireframing</a></li>
+							<li><a href="unit1_projects/wireframe_sites.html" class="button">Wireframing</a></li>
 						</ul>
 					</aside>
 
 					<section class="main-section">
 						<div class="row">
+							<div class="large-12 columns">
+								<ul class="example-orbit" data-orbit>
+									<li>
+										<img src="http://lorempixel.com/900/400/abstract/1" alt="slide 1" />
+									</li>
+									<li class="active">
+										<img src="http://lorempixel.com/900/400/abstract/2" alt="slide 2" />
+									</li>
+									<li>
+										<img src="http://lorempixel.com/900/400/abstract/3" alt="slide 3" />
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="row">
 
-							<div class="large-9 columns" role="content">
+							<div class="thecontent large-9 columns" role="content">
 								<article>
 									<h2>Welcome!</h2>
-									<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 17th, 2014</h6>
-									<br>
-									<img src="images/wireframe.png">
-									<br>
-									<br>
-									<h4>What Problem Is the Youtube.com Solving?</h4>
-									<li>Handling massive uploads and sharing of videos</li><br>
-									<li>Organizing all of the videos uploaded</li><br>
-									<li>Serving the uploaded videos to users</li><br>
-
-									<h4>What Visual Challenges Are There in the Main Page of Youtube.com?</h4>
-									<p>With massive amount of videos being shared on Youtube, the visual challenge of Youtube's main page is to serve each user what he or she wants to see by filtering from all the videos available into a single page.</p>
-									<p>
-										Most of wireframes you are seeing from the pictures above, therefore, are videos. Surprisingly, the biggest video on the top of the main page is an advertisement video. While the content that you really want to see are all the other videos down the page which specifically served up to you according to what you have subcribed or what Youtube thinks you might want to see. 
-									</p>
-									<p>
-										Judging merely from the wireframe, or the first foundation of Youtube web design, I am hoping Youtube's priority is not as big as its advertisement's video when compare to the need of its users which are a little further down the list.
-									</p>
-
-
-
-
+									<p>To navigate around my sites please click on the 3-lines icon on the top right!</p>
+									<p>Have a great day!</p>
 								</article>
 							</div>
 
