--- a/blog-posts/week1_cultural.html
+++ b/blog-posts/week1_cultural.html
@@ -32,8 +32,8 @@
 				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 17th, 2014</h6>
 				<p><B>"You are in charge of your education!"</B> I think that pretty much sum up my take on the DBC experience.</p>
 				<p>Personally, I love this kind of culture and very much would love to be in one all the time.</p>
-				<p>I myself has always feel I am responsible for my own life and thus also responsible for my own growth and education. I think part of growing up is to unlearn the child in oneself that only wants to play and do only what is told and no more: the lack of enthusiasm for growth. And with the education system only tell us what to do and rarely teach us the why-to-do, we ingrained to become that child who has enough of education.</p>
-				<p>Anyways, here we are, and on our way to Phase 1! I am already feeling like the long trek into the web dev world has begun. At some point, my mind fear  itself not being able to be a good programmer. But the mind can fear but the feet must never faltered. You know Johny Walker's Slogan? Yes exactly... <h2>Keep Walking :)</h2></p>
+				<p>I myself has always feel I am responsible for my own life and thus also responsible for my own growth and education. I think part of growing up is to unlearn the child in oneself that only wants to play and do only what is told and no more: the lack of enthusiasm for growth. And with the education system only tell us what to do and rarely teach us the why-to-do, we are ingrained to become that child who is sick and has enough of education.</p>
+				<p>Anyways, here we are, and on our way to Phase 1! I am already feeling like the long trek into the web dev mountain has begun. It is exciting, and challenging. And at some point, my mind fear itself not being able to be a good programmer. In any cases, the mind can fear but the feet must never faltered. And you know Johny Walker's Slogan? Yes exactly... <h2>Keep Walking :)</h2></p>
 
 		</article>
 	</div>
