--- a/unit1_projects/dbc1.html
+++ b/unit1_projects/dbc1.html
@@ -28,9 +28,10 @@
 	<li>I am 26 years old</li>
 	<li>Graduate from Earlham College</li>
 	<li>Major in International Studies</li>
-	<li>Ordained as a Buddhist Monk for one year<li>
+	<li>Ordained as a Buddhist Monk for one year</li>
 	<li>Worked as a coorditor at a Suan Mohkk International Hermitage to help organize meditation courses!</li>
-<div if="background">
+</div>
+<div id="background">
 <h3>Breif Background</h3>
 <p>I went to a liberal art college named Earlham in Indiana. My major interest are Buddhism, philosophy and programming. I love traveling. I had lived in Japan for half a year through an exchange program at my college. After I finish my college, I ordained as a Buddhist monk for one year. (In my cliture it is a tradition for boys coming of age to ordain. However, it is not mandatory to be a monk for life haha many people do it for five days) After I finish my monk hood, I work with no pay for my Buddhist monastery for one year to help the temple by organizing meditation course for both Thais n foreigners. Now, i want to learn programming so I am coming San Francisco and perhaps continuing this exciting journey at DBC!
 </p>
