solo challenge plus some updates

--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Things I Learn Thus Far</title>
 	<link rel="stylesheet" href="../blog-posts/css/app.css"/>
+	<link rel="stylesheet" href="stylesheets/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/dbc2.css">
 	<script src="../blog-posts/bower_components/modernizr/modernizr.js"></script>
 
@@ -22,7 +23,7 @@
 	</div>
 		<div id="title">
 			<h1>Things I Learn Thus Far, From Prep Til Now...</h1>
-			<h2>Finding The <span style="color:red">Right</span> Attitude!</h2>
+			<h2>Finding The <span style="color:red">Right </span><i style="color:#61A7E0;" class="fa fa-thumbs-o-up"></i> Attitude!</h2>
 		</div>
 		<div id="quote">
 			<ul>"I never dream of success, I worked for it." <br><br> -Estee Lauder</ul>
@@ -41,7 +42,7 @@
 
 					And the way to go about it is simply just to do it without any expectations for yourself as well as your work. Just do it. (Nike got it right.) Lots of work? feeling the pressure to finish? Don't give yourself in to these emotions the springs from the desire to finish, just keep doing it! Couldn't figure out the problem? feeling like it's not for you? Don't! just keep doing it. These are merely mind obstables. Like a hurdle you have to keep jumping over each time it comes at you. 
 
-					You know Mike Tyson once said, <br><span style="color:red">"There is no room for emotions in this kind of sport"</span><br> which in our case would be...programming sport?? (haha sorry I am just being a little silly and off-topic but it's true!)
+					You know Mike Tyson once said, <br><i class="fa fa-quote-left"></i><br><span style="color:red">"There is no room for emotions in this kind of sport"</span><br><i class="fa fa-quote-right"></i><br>which in our case would be...programming sport?? (haha sorry I am just being a little silly and off-topic but it's true!)
 				</p>
 			</div> <!-- content -->
 		</div> <!-- main -->
