--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 	<title>Korn's Tech Blog</title>
 	<link rel="stylesheet" href="unit1_projects/stylesheets/reset.css"/>
 	<link rel="stylesheet" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="fonts/font1.woff">
+	<link rel="stylesheet" type="text/css" href="fonts/Squared%20Display.ttf">
 </head>
 <body>
 	<div id="container">
 		<header id="title" class="column7">
-			<h1>Korn's <span style="font-family: tech3; font-size: 1.3em; color:red; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
-">Tech</span> Blog</h1>
+			<h1 style="font-family: yo; font-size: 5em; color:black; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+">Korn's <span class="red" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
 		</header>
 		<nav class="sidebar">
 			<img id="me" src="unit1_projects/images/logo.jpg">
