--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Korn's Tech Blog</title>
-	<link rel="stylesheet" href="unit1_projects/stylesheets/reset.css"/>
 	<link rel="stylesheet" href="style.css"/>
+	<script src="w2r/js/isotope.pkgd.min.js"></script>
 </head>
 <body>
 	<div id="container">
-		<header id="title" class="column7">
+		<header id="title">
 			<h1 style="font-family: yo; font-size: 5em; color:black; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
-">Korn's <span class="red" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
+			">Korn's <span class="red" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
 		</header>
-		<nav class="sidebar">
+		<nav class="stamp sidebar">
 			<img id="me" src="unit1_projects/images/logo.jpg">
 			<ul>
 				<li><a href="index.html" class="button">Index</a></li>
@@ -24,40 +24,25 @@
 				<li><a href="blog-posts/week1_cultural.html" class="button">Cultural Blog</a></li>
 				<li><a href="unit1_projects/wireframe_sites.html" class="button">Wireframing</a></li>
 				<li><a href="unit1_projects/my_wireframe.html" class="button">Site Planning</a></li>
-				<li><a href="#" class="button">Group Responsive Design</a></li>
-
+				<li><a href="w2r/starting-point.html">Group Responsive Design</a></li>
 			</ul>
 		</nav>
- 			<div class="wrapper"> 
- 			<div class="column left">
+		<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
+		<div class="item column left">
 			<p><span style="font-size: 1.5em;">Welcome!</span><br><br>..to my GitHub Page! My name is Korn. Here you will find On you will find my work done for a programming class I am taking at Dev Bootcamp. On your left side there is a navigation tool bar for you to look around.<br><br>Enjoy and have a wonderful day!</p>
+		</div>
+		<div class="item column mid">
+			<span style="font-size: 1.2em; line-height:150%;">A little something about myself</span><br><br>
+			<p>My name is Korn. I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked at the temple organizing meditation courses for 1 year. Now, I am interested in programming and starting my this dev journey at Dev Bootcamp.</p>
+		</div>
+		<div class="item column right">
+			<p><span style="font-size: 1.2em; line-height:150%;">Dev Bootcamp</span><br><br> ..is an immersive 9-week computer programming program founded by Shereef Bishay, Jesse Farmer, and Dave Hoover in February 2012. The creation of this site as well as all the works you will find on this site are all part of the Phase 0 preparation prior to joining Dev Bootcamp on-site in September 2014. Please browse through and glimpse into what we boots have been up to!</p>
 			</div>
-			</div>
-			<div class="wrapper">
-			<div class="column mid">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
-			</div>
-			<div class="wrapper">
-			<div class="column right">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
-			</div>
-
-		<div class="text_line"></div>
-	</div> <!-- container -->
-	<footer>
+			</div> <!-- gridcontainer -->
+						<div class="text_line"></div>
+		<footer>
 			<p>&copy; Copyrights Supakorn Laohasongkram 2014</p>
-	</footer>
+		</footer>
+		</div> <!-- container -->
 	</body>
 	</html>
