--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Korn's Tech Blog</title>
 	<link rel="stylesheet" href="style.css"/>
-	<script src="w2r/js/isotope.pkgd.min.js"></script>
 </head>
 <body>
 	<div id="container">
@@ -29,11 +28,11 @@
 		</nav>
 		<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
 		<div class="item column left">
-			<p><span style="font-size: 1.5em;">Welcome!</span><br><br>..to my GitHub Page! My name is Korn. Here you will find On you will find my work done for a programming class I am taking at Dev Bootcamp. On your left side there is a navigation tool bar for you to look around.<br><br>Enjoy and have a wonderful day!</p>
+			<p><span style="font-size: 1.5em;">Welcome!</span><br><br>..to my GitHub Page! My name is Korn. I am currently working my way toward becoming a junior web developer! And this page is a step in my little journey. To navigate through all my works thus far please click on the links to your left.<br><br>Enjoy and have a wonderful day!</p>
 		</div>
 		<div class="item column mid">
 			<span style="font-size: 1.2em; line-height:150%;">A little something about myself</span><br><br>
-			<p>My name is Korn. I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked at the temple organizing meditation courses for 1 year. Now, I am interested in programming and starting my this dev journey at Dev Bootcamp.</p>
+			<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked at the temple organizing meditation courses for 1 year. Now, I am interested in programming and starting my this dev journey at Dev Bootcamp.</p>
 		</div>
 		<div class="item column right">
 			<p><span style="font-size: 1.2em; line-height:150%;">Dev Bootcamp</span><br><br> ..is an immersive 9-week computer programming program founded by Shereef Bishay, Jesse Farmer, and Dave Hoover in February 2012. The creation of this site as well as all the works you will find on this site are all part of the Phase 0 preparation prior to joining Dev Bootcamp on-site in September 2014. Please browse through and glimpse into what we boots have been up to!</p>
@@ -44,5 +43,6 @@
 			<p>&copy; Copyrights Supakorn Laohasongkram 2014</p>
 		</footer>
 		</div> <!-- container -->
+		<script src="w2r/js/isotope.pkgd.min.js"></script>
 	</body>
 	</html>
