--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 				<li><a href="unit1_projects/wireframe_sites.html" class="button">Wireframing</a></li>
 				<li><a href="unit1_projects/my_wireframe.html" class="button">Site Planning</a></li>
 				<li><a href="w2r/starting-point.html">Group Responsive Design</a></li>
+				<li><a href="blog-posts/week2_technical.html" class="button">Inline or Inline-block</a></li>
 			</ul>
 		</nav>
 		<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
 		<div class="item column left">
-			<p><span style="font-size: 1.5em;">Welcome!</span><br><br>..to my GitHub Page! My name is Korn. I am currently working my way toward becoming a junior web developer! And this page is a step in my little journey. To navigate through all my works thus far please click on the links to your left.<br><br>Enjoy and have a wonderful day!</p>
+			<p><span style="font-size: 1.5em;">Welcome!</span><br><br>..to my GitHub Page! My name is Korn. I am currently working my way toward becoming a junior web developer! And this page is my first step in my little journey. To navigate through all my works thus far please click on the links to your left.<br><br><br>Enjoy and have a wonderful day!</p>
 		</div>
 		<div class="item column mid">
 			<span style="font-size: 1.2em; line-height:150%;">A little something about myself</span><br><br>
