general fix for pages

--- a/unit1_projects/my_wireframe.html
+++ b/unit1_projects/my_wireframe.html
@@ -2,9 +2,44 @@
 <html>
 <head>
 	<title>Planning for My GitHub Page</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/wf.css">
+	<link rel="stylesheet" href="../blog-posts/css/app.css"/>
+	<link rel="stylesheet" href="../blog-posts/css/style.css"/>
+	<script src="../blog-posts/bower_components/modernizr/modernizr.js"></script>
+	<style type="text/css">
+	html {
+	text-align: center;
+}
+
+h1 {
+	font-size: 4em;
+	text-decoration: underline;
+}
+
+li {
+	line-height: 140%;
+}
+
+figcaption {
+	font-size:.8em;
+	font-style: italic;
+}
+
+
+</style>
 </head>
 <body>
+<header>
+	<div class="row">
+		<div class="large-12 columns">
+			<div class="nav-bar right">
+				<ul class="button-group">
+					<li><a href="../index.html" class="button">Index</a></li>
+					<!-- <li><a href="#" class="button">Link 4</a></li> -->
+				</ul>
+			</div>
+		</div>
+	</div>
+</header>
 	<article>
 		<h1>Planning my Index.html</h2>
 		<h3>Main functions of my GitHub page:</h3>
