--- a/blog-posts/week1_technical.html
+++ b/blog-posts/week1_technical.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/style.css"/>
 	<script src="bower_components/modernizr/modernizr.js"></script>
 </head>
-<body>
+<body name="top">
 
 	<div class="row">
 		<div class="large-12 columns">
@@ -19,7 +19,7 @@
 					<!-- <li><a href="#" class="button">Link 4</a></li> -->
 				</ul>
 			</div>
-			<h1>Korn's Tech Blog</h1>
+			<h1 id="title">Korn's Tech Blog</h1>
 			<hr/>
 		</div>
 	</div>
@@ -112,19 +112,18 @@
 
 
 	<aside class="large-3 columns">
-		<h5>Categories</h5>
-		<ul class="side-nav">
-			<li><a href="#">News</a></li>
-			<li><a href="#">Code</a></li>
-			<li><a href="#">Design</a></li>
-			<li><a href="#">Fun</a></li>
-			<li><a href="#">Weasels</a></li>
-		</ul>
-		<div class="panel">
-			<h5>Featured</h5>
-			<p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
-			<a href="#">Read More &rarr;</a>
+<div class="panel">
+		<img id="me" src="../unit1_projects/images/logo.jpg">
+			<p style="font-size: .8em; margin-top:20px;">Hi, I am Korn, a beginner web developer and designer! Any helps are welcomed!</p>
+			<a href="#"></a>
 		</div>
+		<h5>Reference</h5>
+		<ul class="side-nav">
+					<li><a href="facebook.com">Facebook</a></li>
+					<li><a href="google.com">Google</a></li>
+					<li><a href="youtube.com">youtube.com</a></li>
+		</ul>
+
 	</aside>
 
 </div>
@@ -135,14 +134,11 @@
 		<hr/>
 		<div class="row">
 			<div class="large-6 columns">
-				<p>&copy; Copyright no one at all. Go to town.</p>
+				<p>&copy; Copyright Supakorn Laohasongkram 2014</p>
 			</div>
 			<div class="large-6 columns">
 				<ul class="inline-list right">
-					<li><a href="#">Link 1</a></li>
-					<li><a href="#">Link 2</a></li>
-					<li><a href="#">Link 3</a></li>
-					<li><a href="#">Link 4</a></li>
+					<li><a href="#top">To Top</a></li>
 				</ul>
 			</div>
 		</div>
