delete unused files

--- a/unit1_projects/wireframe_sites.html
+++ b/unit1_projects/wireframe_sites.html
@@ -46,7 +46,7 @@
 									<h2>Wireframing Youtube.com</h2>
 									<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 17th, 2014</h6>
 									<br>
-									<img src="images/wireframe.png">
+									<img src="images/wireframe.jpg">
 									<br>
 									<br>
 									<h4>What Problem Is the Youtube.com Solving?</h4>
