--- a/index.html
+++ b/index.html
@@ -5,45 +5,70 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<title>Korn's Tech Blog</title>
-	<link rel="stylesheet" href="style.css"/>
+	<link rel="stylesheet" href="style1.css"/>
 </head>
 <body>
-	<div id="container">
-		<header id="title">
-			<h1 style="font-family: yo; font-size: 5em; color:black; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
-			">Korn's <span class="red" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
-		</header>
-		<nav class="stamp sidebar">
-			<img id="me" src="unit1_projects/images/logo.jpg">
-			<ul>
-				<li><a href="index.html" class="button">Index</a></li>
-				<li><a href="unit1_projects/dbc1.html" class="button">DBC1</a></li>
-				<li><a href="unit1_projects/dbc2.html" class="button">DBC2</a></li>
-				<li><a href="blog-posts/week1_technical.html" class="button">Technical Blog</a></li>
-				<li><a href="blog-posts/week1_cultural.html" class="button">Cultural Blog</a></li>
-				<li><a href="unit1_projects/wireframe_sites.html" class="button">Wireframing</a></li>
-				<li><a href="unit1_projects/my_wireframe.html" class="button">Site Planning</a></li>
-				<li><a href="w2r/starting-point.html">Group Responsive Design</a></li>
-				<li><a href="blog-posts/week2_technical.html" class="button">Inline or Inline-block</a></li>
-			</ul>
-		</nav>
-		<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
-		<div class="item column left">
-			<p><span style="font-size: 1.5em;">Welcome!</span><br><br>..to my GitHub Page! My name is Korn. I am currently working my way toward becoming a junior web developer! And this page is my first step in my little journey. To navigate through all my works thus far please click on the links to your left.<br><br><br>Enjoy and have a wonderful day!</p>
-		</div>
-		<div class="item column mid">
-			<span style="font-size: 1.2em; line-height:150%;">A Little Something About Myself</span><br><br>
-			<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked at the temple organizing meditation courses for 1 year. Now, I am interested in programming and starting my this journey at Dev Bootcamp.</p>
-		</div>
-		<div class="item column right">
-			<p><span style="font-size: 1.2em; line-height:150%;">Dev Bootcamp</span><br><br> ..is an immersive 9-week computer programming program founded by Shereef Bishay, Jesse Farmer, and Dave Hoover in February 2012. The creation of this site as well as all the works you will find on this site are all part of the Phase 0 preparation prior to joining Dev Bootcamp on-site in September 2014. Please browse through and glimpse into what we boots have been up to!</p>
-			</div>
-			</div> <!-- gridcontainer -->
-						<div class="text_line"></div>
-		<footer>
-			<p>&copy; Copyrights Supakorn Laohasongkram 2014</p>
-		</footer>
-		</div> <!-- container -->
-		<script src="w2r/js/isotope.pkgd.min.js"></script>
-	</body>
-	</html>
+	<div class="off-canvas-wrap" data-offcanvas>
+		<div class="inner-wrap">
+			<nav class="tab-bar">
+				<section class="left-small">
+					<a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+				</section>
+			</nav>
+
+			<aside class="left-off-canvas-menu">
+				<ul class="off-canvas-list">
+					<li><label>Projects</label></li>
+					<li><a href="unit1_projects/dbc1.html">DBC1</a></li>
+					<li><a href="unit1_projects/dbc2.html">DBC2</a></li>
+					<li><a href="unit1_projects/wireframe_sites.html">Wireframing</a></li>
+					<li><a href="unit1_projects/my_wireframe.html">Site Planning</a></li>
+					<li><a href="w2r/starting-point.html">Group Responsive Design</a></li>
+					<li><a href="gps1.1/gps1.1.html">GPS1.1</a></li>
+					<li><label>Blogs</label></li>
+					<li><a href="blog-posts/week1_technical.html">Technical Blog</a></li>
+					<li><a href="blog-posts/week1_cultural.html">Cultural Blog</a></li>
+					<li><a href="blog-posts/week2_technical.html">Inline or Inline-block</a></li>
+					<li><label>Game</label></li>
+					<li><a href="solo/solo.html">The Game of Game of Thrones</a></li>
+				</ul>
+			</aside>
+			<section id="container" class="main-section">
+				<header id="title">
+					<h1 style="font-family: yo; font-size: 5em; color:black; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
+					">Korn's <span class="red" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
+				</header>
+				<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
+					<div class="row">
+						<div class="item large-4 medium-6 small-12 columns">
+							<div class="box left">
+								<p><span style="font-size: 1.5em;">Welcome!</span></p>
+								<p>..to my GitHub Page! My name is Korn. I am currently working my way toward becoming a junior web developer! And this page is my first step in my little journey. To navigate through all my works thus far please click on the links to your left.<br><br><br>Enjoy and have a wonderful day!</p>
+							</div>
+						</div>
+						<div class="item large-4 medium-6 small-12 columns">
+							<div class="box mid">
+								<span style="font-size: 1.2em; line-height:150%;">A Little Something About Myself</span><br><br>
+								<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked at the temple organizing meditation courses for 1 year. Now, I am interested in programming and starting my this journey at Dev Bootcamp.</p>
+							</div>
+						</div>
+						<div class="item large-4 medium-6 small-12 columns">
+							<div class="box right">
+
+								<p><span style="font-size: 1.2em; line-height:150%;">Dev Bootcamp</span><br><br> ..is an immersive 9-week computer programming program founded by Shereef Bishay, Jesse Farmer, and Dave Hoover in February 2012. The creation of this site as well as all the works you will find on this site are all part of the Phase 0 preparation prior to joining Dev Bootcamp on-site in September 2014. Please browse through and glimpse into what we boots have been up to!</p>
+							</div>
+						</div>
+					</div> <!-- row -->
+					<footer class="item large-12 columns">
+						<p style="text-align: center";>&copy; Copyrights Supakorn Laohasongkram 2014</p>
+					</footer>  
+					</div> <!-- gridcontainer -->
+					</section> <!-- container -->
+					<a class="exit-off-canvas"></a>
+				</div> 
+				<script src="fo.js"></script>
+				<script>
+					$(document).foundation();
+				</script>
+			</body>
+			</html>
