--- a/solo/solo.html
+++ b/solo/solo.html
@@ -5,13 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <header>
-	
+	<nav>
+		<a href="../index.html">Back to My Page</a>
+	</nav>
 </header>
 <body>
 <div id="container">
 <h2>The Game of Game of Thrones!</h2>
-
-
 <div id="image"></div>
 <div id="imagesource"></div>
 <div id="ccontent">
