--- a/blog-posts/week1_technical.html
+++ b/blog-posts/week1_technical.html
@@ -7,6 +7,8 @@
 	<title>Korn's Tech Blog</title>
 	<link rel="stylesheet" href="css/style.css"/>
 	<script src="bower_components/modernizr/modernizr.js"></script>
+	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+	<link rel="icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body name="top">
 	<div class="off-canvas-wrap" data-offcanvas>
