--- a/blog-posts/week3_technical.html
+++ b/blog-posts/week3_technical.html
@@ -21,6 +21,7 @@
 
 			<aside class="left-off-canvas-menu">
 				<ul class="off-canvas-list">
+					<li><a href="../index.html"><span style="font-size: 1.5em;">Index</span></a></li>
 					<li><label>Projects</label></li>
 					<li><a href="../unit1_projects/dbc1.html">DBC1</a></li>
 					<li><a href="../unit1_projects/dbc2.html">DBC2</a></li>
