--- a/blog-posts/blog_template.html
+++ b/blog-posts/blog_template.html
@@ -42,7 +42,7 @@
 
 		<div class="large-9 columns" role="content">
 			<article>
-				<h2>Title</h2>
+				<h2 id="atitle">Title</h2>
 				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on DATE</h6>
 
 		</article>
