--- a/blog-posts/week1_cultural.html
+++ b/blog-posts/week1_cultural.html
@@ -41,7 +41,7 @@
 
 		<div class="large-9 columns" role="content">
 			<article>
-				<h2>My Take on The DBC Experience: You Are in Charge of Your Education!</h2>
+				<h2 id="atitle">My Take on The DBC Experience: You Are in Charge of Your Education!</h2>
 				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 17th, 2014</h6>
 				<p><B>"You are in charge of your education!"</B> I think that pretty much sum up my take on the DBC experience.</p>
 				<p>Personally, I love this kind of culture and very much would love to be in one all the time.</p>
