--- a/blog-posts/week1_technical.html
+++ b/blog-posts/week1_technical.html
@@ -42,7 +42,7 @@
 
 		<div class="large-9 columns" role="content">
 			<article>
-				<h2>Facebook.com <=> Google.com <=> Youtube.com</h2>
+				<h2 id="atitle">Facebook.com <=> Google.com <=> Youtube.com</h2>
 				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 16, 2014.</h6>
 				<img src="Facebook-Youtube-Google.jpg">
 				<p>I think by far my favorite sites are facebook.com, youtube.com, and google.com. (The popular choices I presume.) The main reason why they are my favorite is because they are the ones I considered most useful and I actually use them most in my daily life. In this blog post, I would analyze these favorite websites of mine to dig a little deeper into why they are my favorite! So let's start looking the first one: facebook.com!
