--- a/blog-posts/week2_technical.html
+++ b/blog-posts/week2_technical.html
@@ -42,7 +42,7 @@
 
 		<div class="large-9 columns" role="content">
 			<article>
-				<h2>CSS Syntax: Display: Inline VS. Display Inline-Block</h2>
+				<h2 id="atitle">CSS Syntax: Display: Inline VS. Display Inline-Block</h2>
 				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on July 25th, 2014</h6>
 
 				<p>Positioning blocks of HTML using CSS can be difficult when you are new! Fear not! In this article, let's learn about one of the most essential CSS syntax called "display." This syntax accepts many arguments, however, we will touch upon two of them which are display: inline; and display: inline-block;. What do they do? and how are they different? And how and when do we use them? These will be answered! So let's begin by looking what is the display syntax.</p>
