--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					<li><a href="blog-posts/week1_technical.html">Technical Blog</a></li>
 					<li><a href="blog-posts/week1_cultural.html">Cultural Blog</a></li>
 					<li><a href="blog-posts/week2_technical.html">Inline or Inline-block</a></li>
+					<li><a href="blog-posts/week3_technical.html">Why Javascript?</a></li>
 					<li><label>Game</label></li>
 					<li><a href="solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
