--- a/blog-posts/week3_cultural.html
+++ b/blog-posts/week3_cultural.html
@@ -41,11 +41,14 @@
 			</aside>
 			<section id="container" class="main-section">
 					<div class="row">
-
+		<div class="large-12 columns">
+		</div>
+			<h2 id="atitle">Know Thy Thinking Style</h2>
+		</div>
+		<div class ="row">
 		<div class="large-9 columns" role="content">
 			<article>
-				<h2 id="atitle">Thinking Style</h2>
-				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on August 2st, 2014</h6>
+				<h6>Written by <a href="https://www.facebook.com/supakorn.laohasongkram">Supakorn Laohasongkram</a> on August 2nd, 2014</h6>
 				<div id="imgwrap">
 				<img src="img/gregorc.jpg">
 				<figcaption style="font-size: .7em; text-align:center;">http://www.openchurch.co.uk/images/gregorc.jpg</figcaption>
