update week4 blogs

--- a/blog-posts/week3_technical.html
+++ b/blog-posts/week3_technical.html
@@ -17,6 +17,9 @@
 				<section class="left-small">
 					<a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
 				</section>
+				<section class="right tab-bar-section">
+					<h6>Korn's Tech Blog</h6>
+				</section>
 			</nav>
 
 			<aside class="left-off-canvas-menu">
@@ -30,9 +33,13 @@
 					<li><a href="../w2r/starting-point.html">Group Responsive Design</a></li>
 					<li><a href="../gps1.1/gps1.1.html">GPS1.1</a></li>
 					<li><label>Blogs</label></li>
-					<li><a href="week1_technical.html">Technical Blog</a></li>
-					<li><a href="week1_cultural.html">Cultural Blog</a></li>
+					<li><a href="week1_technical.html">My Favorite Sites</a></li>
+					<li><a href="week1_cultural.html">Take Charge of Your Edu</a></li>
 					<li><a href="week2_technical.html">Inline or Inline-block</a></li>
+					<li><a href="week3_technical.html">Why Javascript?</a></li>
+					<li><a href="week3_cultural.html">Know Thy Thinking Style</a></li>
+					<li><a href="week4_technical.html">What is Enumerable in Ruby?</a></li>
+					<li><a href="week4_cultural.html">Privacy is Dead</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
