--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 				<section class="left-small">
 					<a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
 				</section>
+				<section class="right tab-bar-section">
+					<h6>Korn's Tech Blog</h6>
+				</section>
 			</nav>
 
 			<aside class="left-off-canvas-menu">
@@ -28,11 +31,13 @@
 					<li><a href="w2r/starting-point.html">Group Responsive Design</a></li>
 					<li><a href="gps1.1/gps1.1.html">GPS1.1</a></li>
 					<li><label>Blogs</label></li>
-					<li><a href="blog-posts/week1_technical.html">Technical Blog</a></li>
-					<li><a href="blog-posts/week1_cultural.html">Cultural Blog</a></li>
+					<li><a href="blog-posts/week1_technical.html">My Favorite Sites</a></li>
+					<li><a href="blog-posts/week1_cultural.html">Take Charge of Your Edu</a></li>
 					<li><a href="blog-posts/week2_technical.html">Inline or Inline-block</a></li>
 					<li><a href="blog-posts/week3_technical.html">Why Javascript?</a></li>
 					<li><a href="blog-posts/week3_cultural.html">Know Thy Thinking Style</a></li>
+					<li><a href="blog-posts/week4_technical.html">What is Enumerable in Ruby?</a></li>
+					<li><a href="blog-posts/week4_cultural.html">Privacy is Dead</a></li>
 					<li><label>Game</label></li>
 					<li><a href="solo/solo.html">The Game of Game of Thrones</a></li>
 				</ul>
@@ -40,24 +45,24 @@
 			<section id="container" class="main-section">
 				<header id="title">
 					<h1 style="font-family: yo; font-size: 5em; color:black; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
-					">Korn's <span class="red" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
+					">Korn's <span style="font-family: tech3; font-size:1.3em;" class="redcolor">Tech</span> Blog</h1>
 				</header>
 				<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
 					<div class="row">
 						<div class="item large-4 medium-6 small-12 columns">
-							<div class="box left">
+							<div class="box red">
 								<p><span style="font-size: 1.5em;">Welcome!</span></p>
 								<p>..to my GitHub Page! My name is Korn. I am currently working my way toward becoming a junior web developer! And this page is my first step in my little journey. To navigate through all my works thus far please click on the links to your left.<br><br><br>Enjoy and have a wonderful day!</p>
 							</div>
 						</div>
 						<div class="item large-4 medium-6 small-12 columns">
-							<div class="box mid">
+							<div class="box black">
 								<span style="font-size: 1.2em; line-height:150%;">A Little Something About Myself</span><br><br>
 								<p>I am 26 years. Born and raised in Bangkok, Thailand. Went to college in Indiana, USA at Earlham College. Majored in Politics. After college, I became a Theravada buddhist monk for 1 year. Afterward, I worked at the temple organizing meditation courses for 1 year. Now, I am interested in programming and starting my this journey at Dev Bootcamp.</p>
 							</div>
 						</div>
 						<div class="item large-4 medium-6 small-12 columns">
-							<div class="box right">
+							<div class="box red">
 
 								<p><span style="font-size: 1.2em; line-height:150%;">Dev Bootcamp</span><br><br> ..is an immersive 9-week computer programming program founded by Shereef Bishay, Jesse Farmer, and Dave Hoover in February 2012. The creation of this site as well as all the works you will find on this site are all part of the Phase 0 preparation prior to joining Dev Bootcamp on-site in September 2014. Please browse through and glimpse into what we boots have been up to!</p>
 							</div>
