--- a/blog-posts/week1_cultural.html
+++ b/blog-posts/week1_cultural.html
@@ -13,11 +13,15 @@
 <body name="top">
 	<div class="off-canvas-wrap" data-offcanvas>
 		<div class="inner-wrap">
-			<nav class="tab-bar">
+				<nav class="tab-bar">
 				<section class="left-small">
 					<a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
 				</section>
+				<section class="right tab-bar-section">
+					<h6>Korn's Tech Blog</h6>
+				</section>
 			</nav>
+
 			<aside class="left-off-canvas-menu">
 				<ul class="off-canvas-list">
 					<li><a href="../index.html"><span style="font-size: 1.5em;">Index</span></a></li>
@@ -29,11 +33,16 @@
 					<li><a href="../w2r/starting-point.html">Group Responsive Design</a></li>
 					<li><a href="../gps1.1/gps1.1.html">GPS1.1</a></li>
 					<li><label>Blogs</label></li>
-					<li><a href="week1_technical.html">Technical Blog</a></li>
-					<li><a href="week1_cultural.html">Cultural Blog</a></li>
+					<li><a href="week1_technical.html">My Favorite Sites</a></li>
+					<li><a href="week1_cultural.html">Take Charge of Your Edu</a></li>
 					<li><a href="week2_technical.html">Inline or Inline-block</a></li>
+					<li><a href="week3_technical.html">Why Javascript?</a></li>
+					<li><a href="week3_cultural.html">Know Thy Thinking Style</a></li>
+					<li><a href="week4_technical.html">What is Enumerable in Ruby?</a></li>
+					<li><a href="week4_cultural.html">Privacy is Dead</a></li>
 					<li><label>Game</label></li>
 					<li><a href="../solo/solo.html">The Game of Game of Thrones</a></li>
+
 				</ul>
 			</aside>
 			<section id="container" class="main-section">
