minor fix index

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<section id="container" class="main-section">
 				<header id="title">
 					<h1 style="font-family: yo; font-size: 5em; color:black; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
-					">Korn's <span style="font-family: tech3; font-size:1.3em;" class="redcolor">Tech</span> Blog</h1>
+					">Korn's <span class="redcolor" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
 				</header>
 				<div id="gridcontainer" class="js-isotope" data-isotope-options='{ "columnWidth": 500, "itemSelector": ".item", "stamp": ".stamp" }'>
 					<div class="row">
