--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 	<div id="container">
 		<header id="title">
 			<h1 style="font-family: yo; font-size: 5em; color:black; text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
-			">Korn's <span class="red" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
+			">Korn's <span class="redcolor" style="font-family: tech3; font-size:1.3em;">Tech</span> Blog</h1>
 		</header>
 		<nav class="stamp sidebar">
 			<img id="me" src="unit1_projects/images/logo.jpg">
