--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -76,7 +76,9 @@ end<br>
 map_array(array)<br>
 p array # => [1,55,66,700,-3,0]
 
-</pre></blockquote>
+</pre></blockquote><br>
+
+<h4>What is the different between .each and .map?</h4>
 
 <p>One point that I should mention is the difference between the ".map" method and the ".each" method. They both could iterate over an array; however with one difference. ".map!" can manipulate the array or hash as it iterates over each element. While ".each" does not. Below is the example of a ".each" method and how ".each" left the original array exactly the same. (non-destructive.)</p>
 
